@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2024-02-28 r85996) -- "Unsuffered Consequences"
+R Under development (unstable) (2024-06-13 r86727) -- "Unsuffered Consequences"
 Copyright (C) 2024 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu
 
@@ -18087,6 +18087,7 @@ Loading required namespace: Matrix
 > ## Don't show: 
 > if(!hadM) unloadNamespace("Matrix")
 > ## End(Don't show)
+> 
 > ## IGNORE_RDIFF_END
 > ## scale W to have column sums 1:
 > W. <- W / sum(wts)
@@ -18120,6 +18121,7 @@ Loading required namespace: Matrix
 > ### Name: ts
 > ### Title: Time-Series Objects
 > ### Aliases: ts as.ts as.ts.default is.ts Ops.ts cbind.ts is.mts [.ts t.ts
+> ###   head.ts tail.ts
 > ### Keywords: ts
 > 
 > ### ** Examples
@@ -18141,20 +18143,46 @@ Loading required namespace: Matrix
 +           start = c(1954, 7), frequency = 12)
 > plot(gnp) # using 'plot.ts' for time-series plot
 > 
+> 
+> ## "ts" methods for head() and tail()
+> utils:: head(lynx, 4)
+Time Series:
+Start = 1821 
+End = 1824 
+Frequency = 1 
+[1] 269 321 585 871
+> utils:: tail(lynx, -7)
+Time Series:
+Start = 1828 
+End = 1934 
+Frequency = 1 
+  [1] 5943 4950 2577  523   98  184  279  409 2285 2685 3409 1824  409  151   45
+ [16]   68  213  546 1033 2129 2536  957  361  377  225  360  731 1638 2725 2871
+ [31] 2119  684  299  236  245  552 1623 3311 6721 4254  687  255  473  358  784
+ [46] 1594 1676 2251 1426  756  299  201  229  469  736 2042 2811 4431 2511  389
+ [61]   73   39   49   59  188  377 1292 4031 3495  587  105  153  387  758 1307
+ [76] 3465 6991 6313 3794 1836  345  382  808 1388 2713 3800 3091 2985 3790  674
+ [91]   81   80  108  229  399 1132 2432 3574 2935 1537  529  485  662 1000 1590
+[106] 2657 3396
+> ## Don't show: 
+>  stopifnot(is.ts(head(lynx, -6)),
++                      is.ts(tail(lynx, 3)))
+> ## End(Don't show)
+> 
 > ## Multivariate
 > z <- ts(matrix(rnorm(300), 100, 3), start = c(1961, 1), frequency = 12)
 > class(z)
 [1] "mts"    "ts"     "matrix" "array" 
 > is.mts(z)
 [1] TRUE
-> head(z) # as "matrix"
-        Series 1   Series 2   Series 3
-[1,] -0.62036668  0.4094018  0.8936737
-[2,]  0.04211587  1.6888733 -1.0472981
-[3,] -0.91092165  1.5865884  1.9713374
-[4,]  0.15802877 -0.3309078 -0.3836321
-[5,] -0.65458464 -2.2852355  1.6541453
-[6,]  1.76728727  2.4976616  1.5122127
+> head(z) # "ts" method ==> incl. times:
+            Series 1   Series 2   Series 3
+Jan 1961 -0.62036668  0.4094018  0.8936737
+Feb 1961  0.04211587  1.6888733 -1.0472981
+Mar 1961 -0.91092165  1.5865884  1.9713374
+Apr 1961  0.15802877 -0.3309078 -0.3836321
+May 1961 -0.65458464 -2.2852355  1.6541453
+Jun 1961  1.76728727  2.4976616  1.5122127
 > plot(z)
 > plot(z, plot.type = "single", lty = 1:3)
 > 
@@ -19589,7 +19617,7 @@ Number of Fisher Scoring iterations: 6
 > cleanEx()
 > options(digits = 7L)
 > base::cat("Time elapsed: ", proc.time() - base::get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  6.076 0.149 6.227 0 0 
+Time elapsed:  5.428 0.289 5.837 0 0 
 > grDevices::dev.off()
 null device 
           1 
